Fix loader vertical align

--- a/src/components/Loader.less
+++ b/src/components/Loader.less
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   display: inline-block;
   position: relative;
+  vertical-align: middle;
 
   *,
   *::before,
